--- a/njuthesis.cfg
+++ b/njuthesis.cfg
@@ -7,7 +7,7 @@
 %% njuthesis.dtx  (with options: `cfg')
 %% This is a generated file.
 %% 
-%% Copyright (C) 2013-2015, Haixing Hu.
+%% Copyright (C) 2013-2017, Haixing Hu.
 %% Department of Computer Science and Technology, Nanjing University.
 %% 
 %% Home Page of the Project: http://haixing-hu.github.io/nju-thesis/
@@ -23,6 +23,7 @@
 %% 
 %% This is the configuration file of the njuthesis package with XeLaTeX.
 \ProvidesFile{njuthesis.cfg}
+\RequirePackage{etoolbox}
 \newcommand*{\njut@cap@abstractname}{摘\hspace{2em}要}
 \newcommand*{\njut@cap@contentsname}{目\hspace{2em}录}
 \newcommand*{\njut@cap@revisionhistory}{修订历史}
@@ -73,6 +74,9 @@
 \newcommand*{\njut@cap@phd}{博士}
 \newcommand*{\njut@cap@master}{硕士}
 \newcommand*{\njut@cap@bachelor}{学士}
+\newcommand*{\njut@cap@type@phd}{研究生}
+\newcommand*{\njut@cap@type@master}{研究生}
+\newcommand*{\njut@cap@type@bachelor}{本科生}
 \newcommand*{\njut@cap@en@phd}{Doctor of Philosophy}
 \newcommand*{\njut@cap@en@master}{Master}
 \newcommand*{\njut@cap@en@bachelor}{Bachelor}
@@ -101,7 +105,7 @@
 \newcommand*{\njut@cap@nlc@clasifiedlevel}{机密}
 \newcommand*{\njut@cap@nlc@mostconfidentiallevel}{绝密}
 \newcommand*{\njut@cap@cover}{中文封面}
-\newcommand*{\njut@cap@cover@thesis}{本科生毕业论文}
+\newcommand*{\njut@cap@cover@thesis}{{\njut@value@type}毕业论文}
 \newcommand*{\njut@cap@cover@apply}{申请{\njut@value@degree}学位}
 \newcommand*{\njut@cap@cover@title}{论文题目}
 \newcommand*{\njut@cap@cover@author}{作者姓名}
@@ -119,7 +123,7 @@
 \newcommand*{\njut@cap@cover@en@supervisor}{Supervised by}
 \newcommand*{\njut@cap@cover@en@statement}{%
 A dissertation submitted to\\
-{\njut@value@en@institute}\\
+the graduate school of {\njut@value@en@institute}\\
 in partial fulfilment of the requirements for the degree of\\
 {\textsc{\njut@value@en@degree}}\\
 in\\
@@ -127,7 +131,7 @@ in\\
 }
 \newcommand*{\njut@cap@abstract}{中文摘要}
 \newcommand*{\njut@cap@abstract@chaptername}%
-            {南京大学本科生毕业论文中文摘要首页用纸}
+            {南京大学{\njut@value@type}毕业论文中文摘要首页用纸}
 \newcommand*{\njut@cap@abstract@title}{毕业论文题目}
 \newcommand*{\njut@cap@abstract@major}{专业}
 \newcommand*{\njut@cap@abstract@author}{级{\njut@value@degree}生姓名}
@@ -136,11 +140,10 @@ in\\
 \newcommand*{\njut@cap@abstract@keywordsname}{关键词}
 \newcommand*{\njut@cap@abstract@en}{英文摘要}
 \newcommand*{\njut@cap@abstract@en@chaptername}%
-            {南京大学本科生毕业论文英文摘要首页用纸}
+            {南京大学{\njut@value@type}毕业论文英文摘要首页用纸}
 \newcommand*{\njut@cap@abstract@en@title}{THESIS}
 \newcommand*{\njut@cap@abstract@en@major}{SPECIALIZATION}
-%\newcommand*{\njut@cap@abstract@en@author}{POSTGRADUATE}
-\newcommand*{\njut@cap@abstract@en@author}{UNDERGRADUATE}
+\newcommand*{\njut@cap@abstract@en@author}{POSTGRADUATE}
 \newcommand*{\njut@cap@abstract@en@supervisor}{MENTOR}
 \newcommand*{\njut@cap@abstract@en@abstractname}{Abstract}
 \newcommand*{\njut@cap@abstract@en@keywordsname}{keywords}
@@ -167,7 +170,7 @@ in\\
 \newcommand*{\njut@cap@license@public}{不保密}
 \newcommand*{\njut@cap@license@secret}{保密，保密期：}
 \newcommand*{\njut@cap@license@title}{论文题名}
-\newcommand*{\njut@cap@license@studentnum}{研究生学号}
+\newcommand*{\njut@cap@license@studentnum}{{\njut@value@type}学号}
 \newcommand*{\njut@cap@license@department}{所在院系}
 \newcommand*{\njut@cap@license@grade}{学位年度}
 \newcommand*{\njut@cap@license@category}{论文级别}
@@ -201,18 +204,23 @@ in\\
 \newcommand*{\njut@value@nlc@reviewerd}{}
 \ifnjut@phd
     \newcommand*{\njut@value@degree}{\njut@cap@phd}
+    \newcommand*{\njut@value@type}{\njut@cap@type@phd}
 \else
     \ifnjut@master
         \newcommand*{\njut@value@degree}{\njut@cap@master}
+        \newcommand*{\njut@value@type}{\njut@cap@type@master}
     \else
        \ifnjut@bachelor
           \newcommand*{\njut@value@degree}{\njut@cap@bachelor}
+          \newcommand*{\njut@value@type}{\njut@cap@type@bachelor}
        \else
           \ClassError{njuthesis}{No degree was selected.}{}
        \fi
     \fi
 \fi
 \newcommand*{\njut@value@title}{(论文标题)}
+\newcommand*{\njut@value@titlea}{(论文长标题第一行)}
+\newcommand*{\njut@value@titleb}{(论文长标题第二行)}
 \newcommand*{\njut@value@author}{(作者姓名)}
 \newcommand*{\njut@value@telphone}{(作者电话号码)}
 \newcommand*{\njut@value@email}{(作者电子邮件)}
