--- a/njuthesis.cfg
+++ b/njuthesis.cfg
@@ -1,27 +1,4 @@
-%%
-%% This is file `njuthesis.cfg',
-%% generated with the docstrip utility.
-%%
-%% The original source files were:
-%%
-%% njuthesis.dtx  (with options: `cfg')
-%% This is a generated file.
-%% 
-%% Copyright (C) 2013-2017, Haixing Hu.
-%% Department of Computer Science and Technology, Nanjing University.
-%% 
-%% Home Page of the Project: http://haixing-hu.github.io/nju-thesis/
-%% 
-%% It may be distributed and/or modified under the conditions of the LaTeX Project
-%% Public License, either version 1.2 of this license or (at your option) any
-%% later version.  The latest version of this license is in
-%% 
-%%    http://www.latex-project.org/lppl.txt
-%% 
-%% and version 1.2 or later is part of all distributions of LaTeX version
-%% 1999/12/01 or later.
-%% 
-%% This is the configuration file of the njuthesis package with XeLaTeX.
+%% 模板配置文件
 \ProvidesFile{njuthesis.cfg}
 \RequirePackage{etoolbox}
 \newcommand*{\njut@cap@abstractname}{摘\hspace{2em}要}
