--- a/njuthesis.cfg
+++ b/njuthesis.cfg
@@ -247,7 +247,7 @@ September\or
 October\or
 November\or
 December\fi
-\number\day, \number\year%
+\;\number\day, \number\year%
 }
 \newcommand*{\njut@value@abstract@titlea}{\njut@value@title}
 \newcommand*{\njut@value@abstract@titleb}{}
