update major name

--- a/njuthesis.cfg
+++ b/njuthesis.cfg
@@ -87,7 +87,7 @@
 \newcommand*{\njut@cap@cover@title}{论文题目}
 \newcommand*{\njut@cap@cover@author}{作者姓名}
 \newcommand*{\njut@cap@cover@supervisor}{指导教师}
-\newcommand*{\njut@cap@cover@major}{学科、专业方向}
+\newcommand*{\njut@cap@cover@major}{学科、专业名称}
 \newcommand*{\njut@cap@cover@researchfield}{研究方向}
 \newcommand*{\njut@cap@cover@department}{院系}
 \newcommand*{\njut@cap@cover@institute}{南京大学}
