--- a/njuthesis.cfg
+++ b/njuthesis.cfg
@@ -203,6 +203,7 @@ in\\
 \newcommand*{\njut@value@email}{(作者电子邮件)}
 \newcommand*{\njut@value@studentnum}{XXXXXXXX}
 \newcommand*{\njut@value@grade}{XXXX}
+\newcommand*{\njut@value@graduateyear}{XXXX}
 \newcommand*{\njut@value@supervisor}{(导师姓名和职称)}
 \newcommand*{\njut@value@supervisortelphone}{(导师电话号码)}
 \newcommand*{\njut@value@major}{(作者专业)}
