--- a/njuthesis.cfg
+++ b/njuthesis.cfg
@@ -133,7 +133,7 @@ in\\
 \newcommand*{\njut@cap@resume@projects}{%
 攻读{\njut@value@degree}学位期间参与的科研课题%
 }
-\newcommand*{\njut@cap@license@chaptername}{学位论文出版授权书}
+\newcommand*{\njut@cap@license@chaptername}{《学位论文出版授权书》}
 \newcommand*{\njut@cap@license@declaration}{%
 本人完全同意《中国优秀博硕士学位论文全文数据库出版章程》（以下简称“章程”），%
 愿意将本人的学位论文提交“中国学术期刊（光盘版）电子杂志社”在《中国博士学位论%
@@ -153,7 +153,7 @@ in\\
 \newcommand*{\njut@cap@license@category}{论文级别}
 \newcommand*{\njut@cap@license@telphone}{作者电话}
 \newcommand*{\njut@cap@license@email}{作者Email}
-\newcommand*{\njut@cap@license@supervisorname}{第一导师姓名}
+\newcommand*{\njut@cap@license@supervisorname}{导师姓名}
 \newcommand*{\njut@cap@license@supervisortelphone}{导师电话}
 \newcommand*{\njut@cap@license@categoryhint}{（请在方框内画勾）}
 \newcommand*{\njut@cap@license@categorymaster}{硕士}
