--- a/njuthesis.cfg
+++ b/njuthesis.cfg
@@ -145,7 +145,7 @@ in\\
 \newcommand*{\njut@cap@license@sign}{作者签名：}
 \newcommand*{\njut@cap@license@securitylevel}{论文涉密情况：}
 \newcommand*{\njut@cap@license@public}{不保密}
-\newcommand*{\njut@cap@license@secret}{保密，保密期：}
+\newcommand*{\njut@cap@license@secret}{保密，保密期 }
 \newcommand*{\njut@cap@license@title}{论文题名}
 \newcommand*{\njut@cap@license@studentnum}{{\njut@value@type}学号}
 \newcommand*{\njut@cap@license@department}{所在院系}
