Fixed English undergraduate text

--- a/njuthesis.cfg
+++ b/njuthesis.cfg
@@ -100,7 +100,7 @@
 \newcommand*{\njut@cap@cover@en@supervisor}{Supervised by}
 \newcommand*{\njut@cap@cover@en@statement}{%
 A dissertation submitted to\\
-the graduate school of {\njut@value@en@institute}\\
+the {\njut@value@en@school} school of {\njut@value@en@institute}\\
 in partial fulfilment of the requirements for the degree of\\
 {\textsc{\njut@value@en@degree}}\\
 in\\
@@ -120,7 +120,8 @@ in\\
             {南京大学{\njut@value@type}毕业论文英文摘要首页用纸}
 \newcommand*{\njut@cap@abstract@en@title}{THESIS}
 \newcommand*{\njut@cap@abstract@en@major}{SPECIALIZATION}
-\newcommand*{\njut@cap@abstract@en@author}{POSTGRADUATE}
+\newcommand*{\njut@cap@abstract@en@author@post}{POSTGRADUATE}
+\newcommand*{\njut@cap@abstract@en@author@under}{UNDERGRADUATE}
 \newcommand*{\njut@cap@abstract@en@supervisor}{MENTOR}
 \newcommand*{\njut@cap@abstract@en@abstractname}{Abstract}
 \newcommand*{\njut@cap@abstract@en@keywordsname}{keywords}
@@ -182,14 +183,20 @@ in\\
 \ifnjut@phd
     \newcommand*{\njut@value@degree}{\njut@cap@phd}
     \newcommand*{\njut@value@type}{\njut@cap@type@phd}
+    \newcommand*{\njut@cap@abstract@en@author}{\njut@cap@abstract@en@author@post}
+    \newcommand*{\njut@value@en@school}{graduate}
 \else
     \ifnjut@master
         \newcommand*{\njut@value@degree}{\njut@cap@master}
         \newcommand*{\njut@value@type}{\njut@cap@type@master}
+        \newcommand*{\njut@cap@abstract@en@author}{\njut@cap@abstract@en@author@post}
+        \newcommand*{\njut@value@en@school}{graduate}
     \else
        \ifnjut@bachelor
           \newcommand*{\njut@value@degree}{\njut@cap@bachelor}
           \newcommand*{\njut@value@type}{\njut@cap@type@bachelor}
+          \newcommand*{\njut@cap@abstract@en@author}{\njut@cap@abstract@en@author@under}
+          \newcommand*{\njut@value@en@school}{undergraduate}
        \else
           \ClassError{njuthesis}{No degree was selected.}{}
        \fi
