根据研究生院文件调整校徽、封面、授权书等样式；修复引用硕士论文（@mastersthesis）错误、中文加粗失效、摘要双面打印失效等bug；添加版权及论文原创性说明

--- a/njuthesis.cfg
+++ b/njuthesis.cfg
@@ -87,7 +87,7 @@
 \newcommand*{\njut@cap@cover@title}{论文题目}
 \newcommand*{\njut@cap@cover@author}{作者姓名}
 \newcommand*{\njut@cap@cover@supervisor}{指导教师}
-\newcommand*{\njut@cap@cover@major}{学科、专业名称}
+\newcommand*{\njut@cap@cover@major}{专业名称}
 \newcommand*{\njut@cap@cover@researchfield}{研究方向}
 \newcommand*{\njut@cap@cover@department}{院系}
 \newcommand*{\njut@cap@cover@institute}{南京大学}
@@ -134,6 +134,16 @@ in\\
 \newcommand*{\njut@cap@resume@projects}{%
 攻读{\njut@value@degree}学位期间参与的科研课题%
 }
+\newcommand*{\njut@cap@statement@chaptername}{版权及论文原创性说明}
+\newcommand*{\njut@cap@statement@declaration}{%
+任何收存和保管本论文的单位和个人，未经作者本人授权，不得将本论文转%
+借他人并复印、抄录、拍照或以任何方式传播，否则，引起有碍作者著作权益的%
+问题，将可能承担法律责任。\par%
+本人郑重声明：所呈交的学位论文，是本人在导师的指导下，独立进行研究%
+工作所取得的成果。除文中已经注明引用的内容外，本论文不包含其他个人或集%
+体已经发表或撰写的作品成果。本文所引用的重要文献，均已在文中以明确方式%
+标明。本声明的法律结果由本人承担。%
+}
 \newcommand*{\njut@cap@license@chaptername}{《学位论文出版授权书》}
 \newcommand*{\njut@cap@license@declaration}{%
 本人完全同意《中国优秀博硕士学位论文全文数据库出版章程》（以下简称“章程”），%
@@ -156,11 +166,11 @@ in\\
 \newcommand*{\njut@cap@license@email}{作者Email}
 \newcommand*{\njut@cap@license@supervisorname}{导师姓名}
 \newcommand*{\njut@cap@license@supervisortelphone}{导师电话}
-\newcommand*{\njut@cap@license@categoryhint}{（请在方框内画勾）}
-\newcommand*{\njut@cap@license@categorymaster}{硕士}
-\newcommand*{\njut@cap@license@categoryphd}{博士}
-\newcommand*{\njut@cap@license@categorymasterspec}{硕士专业学位}
-\newcommand*{\njut@cap@license@categoryphdspec}{博士专业学位}
+\newcommand*{\njut@cap@license@categoryhint}{（请在方框内画钩）}
+\newcommand*{\njut@cap@license@categorymaster}{学术学位硕士}
+\newcommand*{\njut@cap@license@categoryphd}{学术学位博士}
+\newcommand*{\njut@cap@license@categorymasterspec}{专业学位硕士}
+\newcommand*{\njut@cap@license@categoryphdspec}{专业学位博士}
 \newcommand*{\njut@cap@license@remark}{%
 注：请将该授权书填写后装订在学位论文最后一页（南大封面）。%
 }
